--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     
-    <h1>hello world</h1>
+    <div id="demo">
+
+    </div>
     <script src="./index.js"></script>
 </body>
 </html>
